--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+.dark {
+  --background: 14, 14, 14;
+  --foreground: 220, 220, 220;
+  --card: 22, 22, 22;
+  --card-foreground: 180, 180, 190;
+  --input: 18, 18, 18;
+  --input-foreground: 200, 200, 210;
+  --border: 0, 100, 0;
+}
+
 @layer base {
   :root {
     --background: 250, 250, 255;
@@ -11,18 +21,6 @@
     --input: 235, 235, 240;
     --input-foreground: 10, 10, 10;
     --border: 0, 180, 0;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --background: 14, 14, 14;
-      --foreground: 220, 220, 220;
-      --card: 22, 22, 22;
-      --card-foreground: 180, 180, 190;
-      --input: 18, 18, 18;
-      --input-foreground: 200, 200, 210;
-      --border: 0, 100, 0;
-    }
   }
 }
 
