--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 .dark {
   --background: 14, 14, 14;
-  --bg-image: url("bg-background-dark.png");
+  --bg-image: url("/bg-background-dark.png");
   --foreground: 220, 220, 220;
   --card: 22, 22, 22;
   --card-foreground: 180, 180, 190;
@@ -16,7 +16,7 @@
 @layer base {
   :root {
     --background: 250, 250, 255;
-    --bg-image: url("safewords-bg-light.png");
+    --bg-image: url("/safewords-bg-light.png");
     --foreground: 20, 20, 25;
     --card: 245, 245, 250;
     --card-foreground: 45, 50, 60;
